--- a/index.html
+++ b/index.html
@@ -1,8 +1,25 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+
+<head>
+<link rel="stylesheet" href="mystyle.css">
+</head>
+
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
-<p>This is a commit to make it work.</p>
+	<div class="container-header-home">
+		<img src="images/home/logo03.png" alt="Logan's logo. On a black background, a white rounded rectangle sits at an angle, with thin parallel lines and blocks on those lines resembling a mixing board." />
+		<h1 style="text-align:center; color:#EEEEEE"> Logan Hardin </h1>
+	</div>
+	<hr>
+	<div class="container-video-reel">
+		<div style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/442876451?badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen style="position:absolute;top:0;left:0;width:100%;height:100%;" title="Sound Design Portfolio- 2020"></iframe></div><script src="https://player.vimeo.com/api/player.js"></script>
+	</div>
+	<div style="text-align:center; color:#EEEEEE">
+		<p>This is my temporary site, because Wix is expensive.</p>
+	</div>
+	<div id='container'>
+		<img src='http://placekitten.com/100/100' alt="Test cat!" />
+		<p>My Text</p>
+	</div>
 </body>
 </html>
