Added buttons and SVG, working on home page

--- a/index.html
+++ b/index.html
@@ -7,10 +7,13 @@
 
 <body>
 	<div id='container-header-home'>
-		<img src="images/home/logo03.png" alt="Logan's logo. On a black background, a white rounded rectangle sits at an angle, with thin parallel lines and blocks on those lines resembling a mixing board." />
-		<div id="container-header-text">
-			<h1>Logan Hardin</h1>
-			<hr>
+		<img id="img-home" src="images/home/logo.svg" alt="Logan's logo. On a black background, a white rounded rectangle sits at an angle, with thin parallel lines and blocks on those lines resembling a mixing board." />
+		<div>
+			<h1 id="container-header-text">Logan Hardin</h1>
+			<hr id="container-header-div">
+			<div id="container-header-block">
+				<button class="header-button-disabled" style="margin-left: 15px">Home</button> <button class="header-button">Games</button> <button class="header-button">Other</button> <button class="header-button">Resume</button>
+			</div>
 		</div>
 	</div>
 	<div id="container-video-reel">
@@ -19,5 +22,10 @@
 	<div style="text-align:center">
 		<p>This is my temporary site, because Wix is expensive.</p>
 	</div>
+	<hr style="width:80%">
+	<h2>Howdy!</h2>
+	<p>I'm a Sound Designer from Belton, TX, with a Bachelor's in Visualization from Texas A&amp;M, working on my MFA in Sound Design at the Savannah College of Art &amp; Design in Savannah, GA.</p>
+	<p>Video games were my first love. From a young age I loved playing them, and early in high school I decided I wanted to be a part of making them, initially as a 3D artist and designer. It was also then that I first got into music and recording by playing guitar, but the two passions didn't come together until participating in the Chillenium 2016 Game Jam, in which my team won Best in Sound. Since that day, I've pursued a career in game audio design with all my strength.</p>
+	<p>I'm interested in projects that push the bounds of what a game can be, no matter the team size or the genre. If you're interested in me or my work, please don't hesitate to reach out!</p>
 </body>
 </html>
