Lined up just right?
Next step: subpages

--- a/index.html
+++ b/index.html
@@ -2,87 +2,102 @@
 <html lang="en">
 
 <head>
+<meta name="viewport" content="width=device-width, initial-scale=1"/>
 <link rel="stylesheet" href="mystyle.css">
 </head>
 
 <body>
-	<div class="header" id="myHeader">
-		<div id="container-header-home">
-			<img id="img-home" src="images/home/logo.svg" alt="Logan's logo. On a black background, a white rounded rectangle sits at an angle, with thin parallel lines and blocks on those lines resembling a mixing board." />
-			<div>
-				<h1 id="container-header-text">Logan Hardin</h1>
-				<hr id="container-header-div">
-				<div id="container-header-block">
-					<button class="header-button-disabled" style="margin-left: 15px">Home</button> <button class="header-button">Games</button> <button class="header-button">Other</button> <button class="header-button">Resume</button>
-				</div>
-			</div>
+<!--Header (stationary)-->
+	<div class="header-hero" id="container-header-home">
+		<img id="img-home" src="images/home/logo.svg" alt="Logan's logo. On a black background, a white rounded rectangle sits at an angle, with thin parallel lines and blocks on those lines resembling a mixing board." />
+		<div>
+			<h1 id="container-header-text">Logan Hardin</h1>
+			<hr id="container-header-div">
 		</div>
 	</div>
-	<div id="container-disclaimer-text">
-		<p>This is my temporary site, because Wix is expensive.</p>
+<!--Header (sticks to the top)-->
+	<div class="header-sidekick">
+		<button class="header-button-disabled">Home</button>
+		<a href="https://www.google.com/">
+			<button class="header-button">Games</button>
+		</a>
+		<a href="https://www.google.com/">
+			<button class="header-button">Other</button>
+		</a>
+		<a href="https://www.google.com/">
+			<button class="header-button">Resume</button>
+		</a>
 	</div>
+<!--Embedded reel-->
 	<div id="container-video-reel">
 		<div style="padding:56.25% 0 0 0;position:relative;">
 			<iframe src="https://player.vimeo.com/video/442876451?badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen style="position:absolute; top:0; left:0; width:100%; height:100%;" title="Sound Design Portfolio- 2020"></iframe>
 		</div>
 		<script src="https://player.vimeo.com/api/player.js"></script>
 	</div>
-	<hr style="width:80%">
-	<div style="width:80%">
+<!--Temp disclaimer-->
+	<div id="container-disclaimer-text">
+		<p>This is my temporary site, because Wix is expensive.</p>
+	</div>
+	<hr style="width: 80%">
+<!--Temp content to fill the space. Will eventually have sections, quick links, my bio, etc.-->
+	<div style="padding: 1em 7em 1em 7em">
 		<h2 style="text-align:justify">Howdy!</h2>
 		<p>I'm a Sound Designer from Belton, TX, currently living in Minneapolis, MN.</p>
 		<p> Lorem ipsum dolor sit amet.</p>
 	</div>
 	<div id="container-disclaimer-text">
-		<p>This is my temporary site, because Wix is expensive.</p>
+		<p>-</p>
 	</div>
 	<div id="container-disclaimer-text">
-		<p>This is my temporary site, because Wix is expensive.</p>
+		<p>-</p>
 	</div>
 	<div id="container-disclaimer-text">
-		<p>This is my temporary site, because Wix is expensive.</p>
+		<p>-</p>
 	</div>
 	<div id="container-disclaimer-text">
-		<p>This is my temporary site, because Wix is expensive.</p>
+		<p>-</p>
 	</div>
 	<div id="container-disclaimer-text">
-		<p>This is my temporary site, because Wix is expensive.</p>
+		<p>-</p>
 	</div>
 	<div id="container-disclaimer-text">
-		<p>This is my temporary site, because Wix is expensive.</p>
+		<p>-</p>
 	</div>
 	<div id="container-disclaimer-text">
-		<p>This is my temporary site, because Wix is expensive.</p>
+		<p>-</p>
 	</div>
 	<div id="container-disclaimer-text">
-		<p>This is my temporary site, because Wix is expensive.</p>
+		<p>-</p>
 	</div>
 	<div id="container-disclaimer-text">
-		<p>This is my temporary site, because Wix is expensive.</p>
+		<p>-</p>
 	</div>
 	<div id="container-disclaimer-text">
-		<p>This is my temporary site, because Wix is expensive.</p>
+		<p>-</p>
 	</div>
 	<div id="container-disclaimer-text">
-		<p>This is my temporary site, because Wix is expensive.</p>
+		<p>-</p>
 	</div>
 	<div id="container-disclaimer-text">
-		<p>This is my temporary site, because Wix is expensive.</p>
+		<p>-</p>
 	</div>
 	<div id="container-disclaimer-text">
-		<p>This is my temporary site, because Wix is expensive.</p>
+		<p>-</p>
 	</div>
 	<div id="container-disclaimer-text">
-		<p>This is my temporary site, because Wix is expensive.</p>
+		<p>-</p>
 	</div>
 	<div id="container-disclaimer-text">
-		<p>This is my temporary site, because Wix is expensive.</p>
+		<p>-</p>
 	</div>
 	<div id="container-disclaimer-text">
-		<p>This is my temporary site, because Wix is expensive.</p>
+		<p>This is to test scrolling, if you can believe that.</p>
 	</div>
-	<div id="container-disclaimer-text">
-		<p>This is my temporary site, because Wix is expensive.</p>
-	</div>
+
+<footer style="text-align: center">
+	<p>Author: Logan Hardin</p>
+	<!--<p><a href="mailto:loganhardin.sound@gmail.com">loganhardin.sound@gmail.com</a></p>-->
+</footer> 
 </body>
 </html>
