--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 <!--Header (stationary)-->
 	<div class="header-hero" id="container-header-home">
-		<img id="img-home" src="images/home/logo.svg" alt="Logan's logo. On a black background, a white rounded rectangle sits at an angle, with thin parallel lines and blocks on those lines resembling a mixing board." />
+		<img id="img-home" src="images/home/Logo.svg" alt="Logan's logo. On a black background, a white rounded rectangle sits at an angle, with thin parallel lines and blocks on those lines resembling a mixing board." />
 		<div>
 			<h1 id="container-header-text">Logan Hardin</h1>
 			<hr id="container-header-div">
