--- a/index.html
+++ b/index.html
@@ -4,12 +4,13 @@
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1"/>
 <link rel="stylesheet" href="mystyle.css">
+<link rel="icon" type="image/x-icon" href="/images/favicon-16.png">
 </head>
 
 <body>
 <!--Header (stationary)-->
 	<div class="header-hero" id="container-header-home">
-		<img id="img-home" src="images/home/Logo.svg" alt="Logan's logo. On a black background, a white rounded rectangle sits at an angle, with thin parallel lines and blocks on those lines resembling a mixing board." />
+		<img id="img-home" src="images/Logo.svg" alt="Logan's logo. On a black background, a white rounded rectangle sits at an angle, with thin parallel lines and blocks on those lines resembling a mixing board." />
 		<div>
 			<h1 id="container-header-text">Logan Hardin</h1>
 			<hr id="container-header-div">
@@ -94,10 +95,10 @@
 	<div id="container-disclaimer-text">
 		<p>This is to test scrolling, if you can believe that.</p>
 	</div>
-
-<footer style="text-align: center">
-	<p>Author: Logan Hardin</p>
-	<!--<p><a href="mailto:loganhardin.sound@gmail.com">loganhardin.sound@gmail.com</a></p>-->
-</footer> 
+<!--Footer, similar links as header-->
+	<footer style="text-align: center">
+		<p>Author: Logan Hardin</p>
+		<!--<p><a href="mailto:loganhardin.sound@gmail.com">loganhardin.sound@gmail.com</a></p>-->
+	</footer> 
 </body>
 </html>
