--- a/resume/index.html
+++ b/resume/index.html
@@ -3,7 +3,7 @@
 
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1"/>
-<title>Logan Hardin portfolio- Home</title>
+<title>Logan Hardin portfolio- Resume</title>
 <link rel="stylesheet" href="mystyle.css">
 <link rel="icon" type="image/x-icon" href="/images/favicon-32.png">
 </head>
@@ -19,35 +19,23 @@
 	</div>
 <!--Header (sticks to the top)-->
 	<div class="header-sidekick">
-		<button class="header-button-disabled">Home</button>
-		<a target="_self" href="https://snoopy20111.github.io/games">
+		<a href="https://snoopy20111.github.io/">
+			<button class="header-button">Home</button>
+		</a>
+		<a href="https://snoopy20111.github.io/games">
 			<button class="header-button">Games</button>
 		</a>
-		<a target="_self" href="https://snoopy20111.github.io/other">
+		<a href="https://snoopy20111.github.io/other">
 			<button class="header-button">Other</button>
 		</a>
-		<a target="_self" href="https://snoopy20111.github.io/resume">
-			<button class="header-button">Resume</button>
-		</a>
-	</div>
-<!--Embedded reel-->
-	<div id="container-video-reel">
-		<div style="padding:56.25% 0 0 0;position:relative;">
-			<iframe src="https://player.vimeo.com/video/442876451?badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen style="position:absolute; top:0; left:0; width:100%; height:100%;" title="Sound Design Portfolio- 2020"></iframe>
-		</div>
-		<script src="https://player.vimeo.com/api/player.js"></script>
+		<button class="header-button-disabled">Resume</button>
 	</div>
 <!--Temp disclaimer-->
 	<div id="container-disclaimer-text">
 		<p>This is my temporary site, because Wix is expensive.</p>
 	</div>
 	<hr style="width: 80%">
-<!--Temp content to fill the space. Will eventually have sections, quick links, my bio, etc.-->
-	<div style="padding: 1em 7em 1em 7em">
-		<h2 style="text-align:justify">Howdy!</h2>
-		<p>I'm a Sound Designer from Belton, TX, currently living in Minneapolis, MN.</p>
-		<p> Lorem ipsum dolor sit amet.</p>
-	</div>
+<!--Temp content to fill the space.-->
 	<div id="container-disclaimer-text">
 		<p>-</p>
 	</div>
