Subpages 2: Cleaner this time
Cleaned up the subpages how it _should_ be, with all subpages using the same images, fonts, and css files. Also relinked the logo to be the simpler, solid version.

--- a/other/index.html
+++ b/other/index.html
@@ -4,14 +4,14 @@
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1"/>
 <title>Logan Hardin portfolio- Other</title>
-<link rel="stylesheet" href="mystyle.css">
-<link rel="icon" type="image/x-icon" href="/images/favicon-32.png">
+<link rel="stylesheet" href="../mystyle.css">
+<link rel="icon" type="image/x-icon" href="../images/favicon-32.png">
 </head>
 
 <body>
 <!--Header (stationary)-->
 	<div class="header-hero" id="container-header-home">
-		<img id="img-home" src="images/Logo.svg" alt="Logan's logo. On a black background, a white rounded rectangle sits at an angle, with thin parallel lines and blocks on those lines resembling a mixing board." />
+		<img id="img-home" src="../images/Logo03.svg" alt="Logan's logo. On a black background, a white rounded rectangle sits at an angle, with thin parallel lines and blocks on those lines resembling a mixing board." />
 		<div>
 			<h1 id="container-header-text">Logan Hardin</h1>
 			<hr id="container-header-div">
@@ -30,6 +30,8 @@
 			<button class="header-button">Resume</button>
 		</a>
 	</div>
+<!--Temp Header-->
+	<h2 style="text-align: center">Games</h2>
 <!--Temp disclaimer-->
 	<div id="container-disclaimer-text">
 		<p>This is my temporary site, because Wix is expensive.</p>
