Updated temp titles
Just to demonstrate they're different subpages

--- a/other/index.html
+++ b/other/index.html
@@ -31,7 +31,7 @@
 		</a>
 	</div>
 <!--Temp Header-->
-	<h2 style="text-align: center">Games</h2>
+	<h2 style="text-align: center">Other</h2>
 <!--Temp disclaimer-->
 	<div id="container-disclaimer-text">
 		<p>This is my temporary site, because Wix is expensive.</p>
