--- a/resume/index.html
+++ b/resume/index.html
@@ -31,7 +31,7 @@
 		<button class="header-button-disabled">Resume</button>
 	</div>
 <!--Temp Header-->
-	<h2 style="text-align: center">Games</h2>
+	<h2 style="text-align: center">Resume</h2>
 <!--Temp disclaimer-->
 	<div id="container-disclaimer-text">
 		<p>This is my temporary site, because Wix is expensive.</p>
