Added a blank "Quick Links" section

--- a/index.html
+++ b/index.html
@@ -59,12 +59,19 @@
 		<p>This is my temporary site, because Wix is expensive.</p>
 	</div>
 	<hr class="main_hr">
-<!--Temp content to fill the space. Will eventually have sections, quick links, my bio, etc.-->
+<!--Temp content to fill the space. Will eventually have sections, quick links, my bio, etc.-->	
+	<div style="padding: 1em 7em 1em 7em">
+		<h2 style="text-align:justify">Quick Links</h2>
+	</div>
+	
+	<hr class="main_hr">
+	
 	<div style="padding: 1em 7em 1em 7em">
 		<h2 style="text-align:justify">Howdy!</h2>
 		<p>I'm a Sound Designer from Belton, TX, currently living in Minneapolis, MN.</p>
 		<p> Lorem ipsum dolor sit amet.</p>
 	</div>
+	
 	<div id="container-disclaimer-text">
 		<p>-</p>
 	</div>
