--- a/games/index.html
+++ b/games/index.html
@@ -34,16 +34,16 @@
 		</div>
 		<div class="header-sidekick-links">
 			<a target="_self" href="https://twitter.com/Snoopy_20111">
-				<img id="img-twitter" src="images/icon_twitter.svg" alt="Twitter Logo and link to Logan's Twitter page." />
+				<img id="img-twitter" src="../images/icon_twitter.svg" alt="Twitter Logo and link to Logan's Twitter page." />
 			</a>
 			<a target="_self" href="https://www.linkedin.com/in/logan-hardin-b5a3a3139/">
-				<img id="img-linkedin" src="images/icon_linkedin.svg" alt="LinkedIn logo and link to Logan's LinkedIn page." />
+				<img id="img-linkedin" src="../images/icon_linkedin.svg" alt="LinkedIn logo and link to Logan's LinkedIn page." />
 			</a>
 			<a target="_self" href="https://snoopy20111.bandcamp.com/">
-				<img id="img-bandcamp" src="images/icon_bandcamp.svg" alt="Bandcamp logo and link to Logan's old Bandcamp. Following this link is not advised." />
+				<img id="img-bandcamp" src="../images/icon_bandcamp.svg" alt="Bandcamp logo and link to Logan's old Bandcamp. Following this link is not advised." />
 			</a>
 			<a target="_self" href="https://www.tumblr.com/snoopy20111">
-				<img id="img-tumblr" src="images/icon_tumblr.svg" alt="Tumblr logo and link to Logan's Tumblr account. This is significantly less professional, listener discretion is advised." />
+				<img id="img-tumblr" src="../images/icon_tumblr.svg" alt="Tumblr logo and link to Logan's Tumblr account. This is significantly less professional, listener discretion is advised." />
 			</a>
 		</div>
 	</div>
@@ -107,16 +107,16 @@
 	<footer style="text-align: center">
 		<div class="footer-links">
 			<a target="_self" href="https://twitter.com/Snoopy_20111">
-				<img id="img-twitter" src="images/icon_twitter.svg" alt="Twitter Logo and link to Logan's Twitter page." />
+				<img id="img-twitter" src="../images/icon_twitter.svg" alt="Twitter Logo and link to Logan's Twitter page." />
 			</a>
 			<a target="_self" href="https://www.linkedin.com/in/logan-hardin-b5a3a3139/">
-				<img id="img-linkedin" src="images/icon_linkedin.svg" alt="LinkedIn logo and link to Logan's LinkedIn page." />
+				<img id="img-linkedin" src="../images/icon_linkedin.svg" alt="LinkedIn logo and link to Logan's LinkedIn page." />
 			</a>
 			<a target="_self" href="https://snoopy20111.bandcamp.com/">
-				<img id="img-bandcamp" src="images/icon_bandcamp.svg" alt="Bandcamp logo and link to Logan's old Bandcamp. Following this link is not advised." />
+				<img id="img-bandcamp" src="../images/icon_bandcamp.svg" alt="Bandcamp logo and link to Logan's old Bandcamp. Following this link is not advised." />
 			</a>
 			<a target="_self" href="https://www.tumblr.com/snoopy20111">
-				<img id="img-tumblr" src="images/icon_tumblr.svg" alt="Tumblr logo and link to Logan's Tumblr account. This is significantly less professional, listener discretion is advised." />
+				<img id="img-tumblr" src="../images/icon_tumblr.svg" alt="Tumblr logo and link to Logan's Tumblr account. This is significantly less professional, listener discretion is advised." />
 			</a>
 		</div>
 		<p>Author: Logan Hardin</p>
