Fixed header for sub-pages

--- a/games/index.html
+++ b/games/index.html
@@ -13,7 +13,7 @@
 <!--Header (stationary)-->
 	<div class="header-hero">
 		<img id="img-home" src="../images/Logo03.svg" alt="Logan's logo. On a black background, a white rounded rectangle sits at an angle, with thin parallel lines and blocks on those lines resembling a mixing board." />
-		<div>
+		<div style="width:70%">
 			<h1 id="container-header-text">Logan Hardin</h1>
 			<hr id="container-header-div">
 		</div>
