--- a/resume/index.html
+++ b/resume/index.html
@@ -119,8 +119,8 @@
 				<img id="img-tumblr" src="../images/icon_tumblr.svg" alt="Tumblr logo and link to Logan's Tumblr account. This is significantly less professional, listener discretion is advised." />
 			</a>
 		</div>
-		<p>Author: Logan Hardin</p>
 		<!--<p><a href="mailto:loganhardin.sound@gmail.com">loganhardin.sound@gmail.com</a></p>-->
+		<p>©2023 by Logan Hardin</p>
 	</footer>
 </div>
 </body>
