Quick Links Update
Trying to make some boxes and columns here for the Quick Links, but we're not quite there yet.

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <!--Header (stationary)-->
 	<div class="header-hero">
 		<img id="img-home" src="images/Logo03.svg" alt="Logan's logo. On a black background, a white rounded rectangle sits at an angle, with thin parallel lines and blocks on those lines resembling a mixing board." />
-		<div style="width:70%">
+		<div class="header-hero-text-and-div">
 			<h1 id="container-header-text">Logan Hardin</h1>
 			<hr id="container-header-div">
 		</div>
@@ -59,19 +59,39 @@
 		<p>This is my temporary site, because Wix is expensive.</p>
 	</div>
 	<hr class="main_hr">
-<!--Temp content to fill the space. Will eventually have sections, quick links, my bio, etc.-->	
-	<div style="padding: 1em 7em 1em 7em">
-		<h2 style="text-align:justify">Quick Links</h2>
+<!--Quick Links-->	
+	<div class="content-normal-div">
+		<h2>Quick Links</h2>
+		<div class="content-quick-link-div">
+			<div class="content-quick-link-box">
+				<div>
+					<p>Forza Motorsport</p>
+				</div>
+				<div>
+					<p>Roboxing</p>
+				</div>
+				<div>
+					<p>Triseum &#38; LIVE Lab</p>
+				</div>
+				<div>
+					<p>Reaper Scripts</p>
+				</div>
+				<div>
+					<p>Other Student Projects</p>
+				</div>
+				<div>
+					<p>Solar Science</p>
+				</div>
+			</div>
+		</div>
 	</div>
-	
 	<hr class="main_hr">
-	
-	<div style="padding: 1em 7em 1em 7em">
-		<h2 style="text-align:justify">Howdy!</h2>
+<!--Bio-->
+	<div class="content-normal-div">
+		<h2>Howdy!</h2>
 		<p>I'm a Sound Designer from Belton, TX, currently living in Minneapolis, MN.</p>
 		<p> Lorem ipsum dolor sit amet.</p>
 	</div>
-	
 	<div id="container-disclaimer-text">
 		<p>-</p>
 	</div>
@@ -83,42 +103,6 @@
 	</div>
 	<div id="container-disclaimer-text">
 		<p>-</p>
-	</div>
-	<div id="container-disclaimer-text">
-		<p>-</p>
-	</div>
-	<div id="container-disclaimer-text">
-		<p>-</p>
-	</div>
-	<div id="container-disclaimer-text">
-		<p>-</p>
-	</div>
-	<div id="container-disclaimer-text">
-		<p>-</p>
-	</div>
-	<div id="container-disclaimer-text">
-		<p>-</p>
-	</div>
-	<div id="container-disclaimer-text">
-		<p>-</p>
-	</div>
-	<div id="container-disclaimer-text">
-		<p>-</p>
-	</div>
-	<div id="container-disclaimer-text">
-		<p>-</p>
-	</div>
-	<div id="container-disclaimer-text">
-		<p>-</p>
-	</div>
-	<div id="container-disclaimer-text">
-		<p>-</p>
-	</div>
-	<div id="container-disclaimer-text">
-		<p>-</p>
-	</div>
-	<div id="container-disclaimer-text">
-		<p>This is to test scrolling, if you can believe that.</p>
 	</div>
 <!--Footer, similar links as header-->
 	<footer style="text-align: center">
