Fixed buttons on Resume page opening in new tab

--- a/resume/index.html
+++ b/resume/index.html
@@ -21,13 +21,13 @@
 <!--Header (sticks to the top)-->
 	<div class="header-sidekick">
 		<div class="header-sidekick-buttons">
-			<a href="https://snoopy20111.github.io/">
+			<a target="_self" href="https://loganhardin.xyz/">
 				<button class="header-button">Home</button>
 			</a>
-			<a href="https://snoopy20111.github.io/games">
+			<a target="_self" href="https://loganhardin.xyz/games">
 				<button class="header-button">Games</button>
 			</a>
-			<a href="https://snoopy20111.github.io/other">
+			<a target="_self" href="https://loganhardin.xyz/other">
 				<button class="header-button">Other</button>
 			</a>
 			<button class="header-button-disabled">Resume</button>
