Replacing links with my domain

--- a/index.html
+++ b/index.html
@@ -22,13 +22,13 @@
 	<div class="header-sidekick">
 		<div class="header-sidekick-buttons">
 			<button class="header-button-disabled">Home</button>
-			<a target="_self" href="https://snoopy20111.github.io/games">
+			<a target="_self" href="https://loganhardin.xyz/games">
 				<button class="header-button">Games</button>
 			</a>
-			<a target="_self" href="https://snoopy20111.github.io/other">
+			<a target="_self" href="https://loganhardin.xyz/other">
 				<button class="header-button">Other</button>
 			</a>
-			<a target="_self" href="https://snoopy20111.github.io/resume">
+			<a target="_self" href="https://loganhardin.xyz/resume">
 				<button class="header-button">Resume</button>
 			</a>
 		</div>
@@ -56,7 +56,8 @@
 	</div>
 <!--Temp disclaimer-->
 	<div id="container-disclaimer-text">
-		<p>This is my temporary site, because Wix is expensive.</p>
+		<p>This site is under construction as I learn HTML.</p>
+		<p>Check back later!</p>
 	</div>
 	<hr class="main_hr">
 <!--Quick Links-->	
