--- a/other/index.html
+++ b/other/index.html
@@ -21,14 +21,14 @@
 <!--Header (sticks to the top)-->
 	<div class="header-sidekick">
 		<div class="header-sidekick-buttons">
-			<a target="_self" href="https://snoopy20111.github.io/">
+			<a target="_self" href="https://loganhardin.xyz/">
 				<button class="header-button">Home</button>
 			</a>
-			<a target="_self" href="https://snoopy20111.github.io/games">
+			<a target="_self" href="https://loganhardin.xyz/games">
 				<button class="header-button">Games</button>
 			</a>
 			<button class="header-button-disabled">Other</button>
-			<a target="_self" href="https://snoopy20111.github.io/resume">
+			<a target="_self" href="https://loganhardin.xyz/resume">
 				<button class="header-button">Resume</button>
 			</a>
 		</div>
@@ -47,12 +47,8 @@
 			</a>
 		</div>
 	</div>
-<!--Temp Header-->
+<!--Page Title-->
 	<h2 style="text-align: center">Other</h2>
-<!--Temp disclaimer-->
-	<div id="container-disclaimer-text">
-		<p>This is my temporary site, because Wix is expensive.</p>
-	</div>
 	<hr class="main_hr">
 <!--Temp content to fill the space.-->
 	<div id="container-disclaimer-text">
