--- a/resume/index.html
+++ b/resume/index.html
@@ -47,12 +47,8 @@
 			</a>
 		</div>
 	</div>
-<!--Temp Header-->
+<!--Page Title-->
 	<h2 style="text-align: center">Resume</h2>
-<!--Temp disclaimer-->
-	<div id="container-disclaimer-text">
-		<p>This is my temporary site, because Wix is expensive.</p>
-	</div>
 	<hr class="main_hr">
 <!--Temp content to fill the space.-->
 	<div id="container-disclaimer-text">
