Quick Links Boxes (Needs more formatting)

--- a/index.html
+++ b/index.html
@@ -56,42 +56,49 @@
 	</div>
 <!--Temp disclaimer-->
 	<div id="container-disclaimer-text">
-		<p>This site is under construction as I learn HTML.</p>
-		<p>Check back later!</p>
+		<p>This site is under construction as I learn HTML.Check back later!</p>
 	</div>
 	<hr class="main_hr">
 <!--Quick Links-->	
 	<div class="content-normal-div">
 		<h2>Quick Links</h2>
 		<div class="content-quick-link-div">
+			<a target="_self" href="https://snoopy20111.bandcamp.com/">
 			<div class="content-quick-link-box">
-				<div>
-					<p>Forza Motorsport</p>
-				</div>
-				<div>
-					<p>Roboxing</p>
-				</div>
-				<div>
-					<p>Triseum &#38; LIVE Lab</p>
-				</div>
-				<div>
-					<p>Reaper Scripts</p>
-				</div>
-				<div>
-					<p>Other Student Projects</p>
-				</div>
-				<div>
-					<p>Solar Science</p>
-				</div>
+				<img id="img-quicklink-prev" src="images/Logo03.svg" alt="Temp" />
+				<p>Forza Motorsport</p>
 			</div>
+			</a>
+			<<a target="_self" href="https://snoopy20111.bandcamp.com/">
+			<div class="content-quick-link-box">
+				<img id="img-quicklink-prev" src="images/Logo03.svg" alt="Temp" />
+				<p>Roboxing</p>
+			</div>
+			</a>
+			<a target="_self" href="https://snoopy20111.bandcamp.com/">
+			<div class="content-quick-link-box">
+				<img id="img-quicklink-prev" src="images/Logo03.svg" alt="Temp" />
+				<p>Triseum &#38; LIVE Lab</p>
+			</div>
+			</a>
+			<a target="_self" href="https://snoopy20111.bandcamp.com/">
+			<div class="content-quick-link-box">
+				<img id="img-quicklink-prev" src="images/Logo03.svg" alt="Temp" />
+				<p>Reaper Scripts</p>
+			</div>
+			</a>
 		</div>
 	</div>
 	<hr class="main_hr">
 <!--Bio-->
-	<div class="content-normal-div">
-		<h2>Howdy!</h2>
-		<p>I'm a Sound Designer from Belton, TX, currently living in Minneapolis, MN.</p>
-		<p> Lorem ipsum dolor sit amet.</p>
+	<div class="content-bio-div">
+		<div>
+			<h2>Howdy!</h2>
+			<p>I'm a Sound Designer from Belton, TX, currently living in Minneapolis, MN. <br><br> Lorem ipsum dolor sit amet.</p>
+		</div>
+		<div>
+			<img id="img-bio" src="images/Logo03.svg" alt="Logan's logo. On a black background, a white rounded rectangle sits at an angle, with thin parallel lines and blocks on those lines resembling a mixing board." />
+		</div>
 	</div>
 	<div id="container-disclaimer-text">
 		<p>-</p>
