--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 			<a target="_self" href="https://loganhardin.xyz/other">
 				<button class="header-button">Other</button>
 			</a>
-			<a target="_self" href="https://loganhardin.xyz/resume">
+			<a href="resume.pdf">
 				<button class="header-button">Resume</button>
 			</a>
 		</div>
@@ -47,6 +47,8 @@
 			</a>
 		</div>
 	</div>
+<!--Main content-->
+<div class="content-main">
 <!--Embedded reel-->
 	<div id="container-video-reel">
 		<div style="padding:56.25% 0 0 0;position:relative;">
@@ -56,7 +58,7 @@
 	</div>
 <!--Temp disclaimer-->
 	<div id="container-disclaimer-text">
-		<p>This site is under construction as I learn HTML.Check back later!</p>
+		<p>This site is under construction as I learn HTML. Check back later!</p>
 	</div>
 	<hr class="main_hr">
 <!--Quick Links-->	
@@ -109,11 +111,9 @@
 	<div id="container-disclaimer-text">
 		<p>-</p>
 	</div>
-	<div id="container-disclaimer-text">
-		<p>-</p>
-	</div>
+</div>
 <!--Footer, similar links as header-->
-	<footer style="text-align: center">
+	<footer class="footer-main">
 		<div class="footer-links">
 			<a target="_self" href="https://twitter.com/Snoopy_20111">
 				<img id="img-twitter" src="images/icon_twitter.svg" alt="Twitter Logo and link to Logan's Twitter page." />
