--- a/other/index.html
+++ b/other/index.html
@@ -28,7 +28,7 @@
 				<button class="header-button">Games</button>
 			</a>
 			<button class="header-button-disabled">Other</button>
-			<a target="_self" href="https://loganhardin.xyz/resume">
+			<a href="../resume.pdf">
 				<button class="header-button">Resume</button>
 			</a>
 		</div>
@@ -47,60 +47,36 @@
 			</a>
 		</div>
 	</div>
+<!--Main content-->
+<div class="content-main">
 <!--Page Title-->
 	<h2 style="text-align: center">Other</h2>
 	<hr class="main_hr">
-<!--Temp content to fill the space.-->
-	<div id="container-disclaimer-text">
-		<p>-</p>
+<!--Reaper Scripts-->
+	<div id="ReaperScripts">
+		<h2 class="project-title">Reaper Scripts</h2>
+		<div class="project-div">
+			<div class="project-content-left">
+				<p>Lorem ipsum dolor sit amet.</p>
+			</div>
+			<img class="project-content-right" id="img-quicklink-prev" src="../images/Logo03.svg" alt="Temp" />
+		</div>
 	</div>
-	<div id="container-disclaimer-text">
-		<p>-</p>
+	<hr class="main_hr">
+<!--In Living Color (art)-->
+	<div id="InLivingColor">
+		<h2 class="project-title">In Living Color</h2>
+		<div class="project-div">
+			<div class="project-content-left">
+				<p>Lorem ipsum dolor sit amet.</p>
+			</div>
+			<img class="project-content-right" id="img-quicklink-prev" src="../images/Logo03.svg" alt="Temp" />
+		</div>
 	</div>
-	<div id="container-disclaimer-text">
-		<p>-</p>
-	</div>
-	<div id="container-disclaimer-text">
-		<p>-</p>
-	</div>
-	<div id="container-disclaimer-text">
-		<p>-</p>
-	</div>
-	<div id="container-disclaimer-text">
-		<p>-</p>
-	</div>
-	<div id="container-disclaimer-text">
-		<p>-</p>
-	</div>
-	<div id="container-disclaimer-text">
-		<p>-</p>
-	</div>
-	<div id="container-disclaimer-text">
-		<p>-</p>
-	</div>
-	<div id="container-disclaimer-text">
-		<p>-</p>
-	</div>
-	<div id="container-disclaimer-text">
-		<p>-</p>
-	</div>
-	<div id="container-disclaimer-text">
-		<p>-</p>
-	</div>
-	<div id="container-disclaimer-text">
-		<p>-</p>
-	</div>
-	<div id="container-disclaimer-text">
-		<p>-</p>
-	</div>
-	<div id="container-disclaimer-text">
-		<p>-</p>
-	</div>
-	<div id="container-disclaimer-text">
-		<p>This is to test scrolling, if you can believe that.</p>
-	</div>
+	<hr class="main_hr">
+</div>
 <!--Footer, similar links as header-->
-	<footer style="text-align: center">
+	<footer class="footer-main">
 		<div class="footer-links">
 			<a target="_self" href="https://twitter.com/Snoopy_20111">
 				<img id="img-twitter" src="../images/icon_twitter.svg" alt="Twitter Logo and link to Logan's Twitter page." />
