--- a/games/index.html
+++ b/games/index.html
@@ -28,7 +28,7 @@
 			<a target="_self" href="https://loganhardin.xyz/other">
 				<button class="header-button">Other</button>
 			</a>
-			<a target="_self" href="https://loganhardin.xyz/resume">
+			<a href="../resume.pdf">
 				<button class="header-button">Resume</button>
 			</a>
 		</div>
@@ -47,60 +47,47 @@
 			</a>
 		</div>
 	</div>
+<!--Main content-->
+<div class="content-main">
 <!--Page Title-->
 	<h2 style="text-align: center">Games</h2>
 	<hr class="main_hr">
-<!--Temp content to fill the space.-->
-	<div id="container-disclaimer-text">
-		<p>-</p>
+<!--Forza!-->
+	<div id="Forza">
+		<h2 class="project-title">Forza Motorsport</h2>
+		<div class="project-div">
+			<div class="project-content-left">
+				<p>Lorem ipsum dolor sit amet.</p>
+			</div>
+			<img class="project-content-right" id="img-quicklink-prev" src="../images/Logo03.svg" alt="Temp" />
+		</div>
 	</div>
-	<div id="container-disclaimer-text">
-		<p>-</p>
+	<hr class="main_hr">
+<!--Roboxing-->
+	<div id="Roboxing">
+		<h2 class="project-title">Roboxing</h2>
+		<div class="project-div">
+			<div class="project-content-left">
+				<p>Lorem ipsum dolor sit amet.</p>
+			</div>
+			<img class="project-content-right" id="img-quicklink-prev" src="../images/Logo03.svg" alt="Temp" />
+		</div>
 	</div>
-	<div id="container-disclaimer-text">
-		<p>-</p>
+	<hr class="main_hr">
+<!--Triseum & Live Lab projects-->
+	<div id="TriseumLiveLab">
+		<h2 class="project-title">Triseum &#38; LIVE Lab</h2>
+		<div class="project-div">
+			<div class="project-content-left">
+				<p>Lorem ipsum dolor sit amet.</p>
+			</div>
+			<img class="project-content-right" id="img-quicklink-prev" src="../images/Logo03.svg" alt="Temp" />
+		</div>
 	</div>
-	<div id="container-disclaimer-text">
-		<p>-</p>
-	</div>
-	<div id="container-disclaimer-text">
-		<p>-</p>
-	</div>
-	<div id="container-disclaimer-text">
-		<p>-</p>
-	</div>
-	<div id="container-disclaimer-text">
-		<p>-</p>
-	</div>
-	<div id="container-disclaimer-text">
-		<p>-</p>
-	</div>
-	<div id="container-disclaimer-text">
-		<p>-</p>
-	</div>
-	<div id="container-disclaimer-text">
-		<p>-</p>
-	</div>
-	<div id="container-disclaimer-text">
-		<p>-</p>
-	</div>
-	<div id="container-disclaimer-text">
-		<p>-</p>
-	</div>
-	<div id="container-disclaimer-text">
-		<p>-</p>
-	</div>
-	<div id="container-disclaimer-text">
-		<p>-</p>
-	</div>
-	<div id="container-disclaimer-text">
-		<p>-</p>
-	</div>
-	<div id="container-disclaimer-text">
-		<p>This is to test scrolling, if you can believe that.</p>
-	</div>
+	
+</div>
 <!--Footer, similar links as header-->
-	<footer style="text-align: center">
+	<footer class="footer-main">
 		<div class="footer-links">
 			<a target="_self" href="https://twitter.com/Snoopy_20111">
 				<img id="img-twitter" src="../images/icon_twitter.svg" alt="Twitter Logo and link to Logan's Twitter page." />
