Attempt at subheader links(?)
Trying to make Quick Links send you to sections of the subpages. We'll see if it works.

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 		<img id="img-home" src="images/Logo03.svg" alt="Logan's logo. On a black background, a white rounded rectangle sits at an angle, with thin parallel lines and blocks on those lines resembling a mixing board." />
 		<div class="header-hero-text-and-div">
 			<h1 id="container-header-text">Logan Hardin</h1>
-			<hr id="container-header-div">
+			<hr id="container-header-hr">
 		</div>
 	</div>
 <!--Header (sticks to the top)-->
@@ -65,25 +65,25 @@
 	<div class="content-normal-div">
 		<h2>Quick Links</h2>
 		<div class="content-quick-link-div">
-			<a target="_self" href="https://snoopy20111.bandcamp.com/">
+			<a target="_self" href="https://loganhardin.xyz/games#Forza">
 			<div class="content-quick-link-box">
 				<img id="img-quicklink-prev" src="images/Logo03.svg" alt="Temp" />
 				<p>Forza Motorsport</p>
 			</div>
 			</a>
-			<<a target="_self" href="https://snoopy20111.bandcamp.com/">
+			<<a target="_self" href="https://loganhardin.xyz/games#Roboxing">
 			<div class="content-quick-link-box">
 				<img id="img-quicklink-prev" src="images/Logo03.svg" alt="Temp" />
 				<p>Roboxing</p>
 			</div>
 			</a>
-			<a target="_self" href="https://snoopy20111.bandcamp.com/">
+			<a target="_self" href="https://loganhardin.xyz/games#TriseumLiveLab">
 			<div class="content-quick-link-box">
 				<img id="img-quicklink-prev" src="images/Logo03.svg" alt="Temp" />
 				<p>Triseum &#38; LIVE Lab</p>
 			</div>
 			</a>
-			<a target="_self" href="https://snoopy20111.bandcamp.com/">
+			<a target="_self" href="https://loganhardin.xyz/games#ReaperScripts">
 			<div class="content-quick-link-box">
 				<img id="img-quicklink-prev" src="images/Logo03.svg" alt="Temp" />
 				<p>Reaper Scripts</p>
