--- a/other/index.html
+++ b/other/index.html
@@ -15,7 +15,7 @@
 		<img id="img-home" src="../images/Logo03.svg" alt="Logan's logo. On a black background, a white rounded rectangle sits at an angle, with thin parallel lines and blocks on those lines resembling a mixing board." />
 		<div class="header-hero-text-and-div">
 			<h1 id="container-header-text">Logan Hardin</h1>
-			<hr id="container-header-div">
+			<hr id="container-header-hr">
 		</div>
 	</div>
 <!--Header (sticks to the top)-->
