Removed link formatting
Also in this commit and the last: changed Quick Links to flex boxes.

--- a/games/index.html
+++ b/games/index.html
@@ -21,28 +21,28 @@
 <!--Header (sticks to the top)-->
 	<div class="header-sidekick">
 		<div class="header-sidekick-buttons">
-			<a target="_self" href="https://loganhardin.xyz/">
+			<a class="undecorated-links" target="_self" href="https://loganhardin.xyz/">
 				<button class="header-button">Home</button>
 			</a>
 			<button class="header-button-disabled">Games</button>
-			<a target="_self" href="https://loganhardin.xyz/other">
+			<a class="undecorated-links" target="_self" href="https://loganhardin.xyz/other">
 				<button class="header-button">Other</button>
 			</a>
-			<a href="../resume.pdf">
+			<a class="undecorated-links" href="../resume.pdf">
 				<button class="header-button">Resume</button>
 			</a>
 		</div>
 		<div class="header-sidekick-links">
-			<a target="_self" href="https://twitter.com/Snoopy_20111">
+			<a class="undecorated-links" target="_self" href="https://twitter.com/Snoopy_20111">
 				<img id="img-twitter" src="../images/icon_twitter.svg" alt="Twitter Logo and link to Logan's Twitter page." />
 			</a>
-			<a target="_self" href="https://www.linkedin.com/in/logan-hardin-b5a3a3139/">
+			<a class="undecorated-links" target="_self" href="https://www.linkedin.com/in/logan-hardin-b5a3a3139/">
 				<img id="img-linkedin" src="../images/icon_linkedin.svg" alt="LinkedIn logo and link to Logan's LinkedIn page." />
 			</a>
-			<a target="_self" href="https://snoopy20111.bandcamp.com/">
+			<a class="undecorated-links" target="_self" href="https://snoopy20111.bandcamp.com/">
 				<img id="img-bandcamp" src="../images/icon_bandcamp.svg" alt="Bandcamp logo and link to Logan's old Bandcamp. Following this link is not advised." />
 			</a>
-			<a target="_self" href="https://www.tumblr.com/snoopy20111">
+			<a class="undecorated-links" target="_self" href="https://www.tumblr.com/snoopy20111">
 				<img id="img-tumblr" src="../images/icon_tumblr.svg" alt="Tumblr logo and link to Logan's Tumblr account. This is significantly less professional, listener discretion is advised." />
 			</a>
 		</div>
@@ -89,16 +89,16 @@
 <!--Footer, similar links as header-->
 	<footer class="footer-main">
 		<div class="footer-links">
-			<a target="_self" href="https://twitter.com/Snoopy_20111">
+			<a class="undecorated-links" target="_self" href="https://twitter.com/Snoopy_20111">
 				<img id="img-twitter" src="../images/icon_twitter.svg" alt="Twitter Logo and link to Logan's Twitter page." />
 			</a>
-			<a target="_self" href="https://www.linkedin.com/in/logan-hardin-b5a3a3139/">
+			<a class="undecorated-links" target="_self" href="https://www.linkedin.com/in/logan-hardin-b5a3a3139/">
 				<img id="img-linkedin" src="../images/icon_linkedin.svg" alt="LinkedIn logo and link to Logan's LinkedIn page." />
 			</a>
-			<a target="_self" href="https://snoopy20111.bandcamp.com/">
+			<a class="undecorated-links" target="_self" href="https://snoopy20111.bandcamp.com/">
 				<img id="img-bandcamp" src="../images/icon_bandcamp.svg" alt="Bandcamp logo and link to Logan's old Bandcamp. Following this link is not advised." />
 			</a>
-			<a target="_self" href="https://www.tumblr.com/snoopy20111">
+			<a class="undecorated-links" target="_self" href="https://www.tumblr.com/snoopy20111">
 				<img id="img-tumblr" src="../images/icon_tumblr.svg" alt="Tumblr logo and link to Logan's Tumblr account. This is significantly less professional, listener discretion is advised." />
 			</a>
 		</div>
