--- a/index.html
+++ b/index.html
@@ -22,27 +22,27 @@
 	<div class="header-sidekick">
 		<div class="header-sidekick-buttons">
 			<button class="header-button-disabled">Home</button>
-			<a target="_self" href="https://loganhardin.xyz/games">
+			<a class="undecorated-links" target="_self" href="https://loganhardin.xyz/games">
 				<button class="header-button">Games</button>
 			</a>
-			<a target="_self" href="https://loganhardin.xyz/other">
+			<a class="undecorated-links" target="_self" href="https://loganhardin.xyz/other">
 				<button class="header-button">Other</button>
 			</a>
-			<a href="resume.pdf">
+			<a class="undecorated-links" href="resume.pdf">
 				<button class="header-button">Resume</button>
 			</a>
 		</div>
 		<div class="header-sidekick-links">
-			<a target="_self" href="https://twitter.com/Snoopy_20111">
+			<a class="undecorated-links" target="_self" href="https://twitter.com/Snoopy_20111">
 				<img id="img-twitter" src="images/icon_twitter.svg" alt="Twitter Logo and link to Logan's Twitter page." />
 			</a>
-			<a target="_self" href="https://www.linkedin.com/in/logan-hardin-b5a3a3139/">
+			<a class="undecorated-links" target="_self" href="https://www.linkedin.com/in/logan-hardin-b5a3a3139/">
 				<img id="img-linkedin" src="images/icon_linkedin.svg" alt="LinkedIn logo and link to Logan's LinkedIn page." />
 			</a>
-			<a target="_self" href="https://snoopy20111.bandcamp.com/">
+			<a class="undecorated-links" target="_self" href="https://snoopy20111.bandcamp.com/">
 				<img id="img-bandcamp" src="images/icon_bandcamp.svg" alt="Bandcamp logo and link to Logan's old Bandcamp. Following this link is not advised." />
 			</a>
-			<a target="_self" href="https://www.tumblr.com/snoopy20111">
+			<a class="undecorated-links" target="_self" href="https://www.tumblr.com/snoopy20111">
 				<img id="img-tumblr" src="images/icon_tumblr.svg" alt="Tumblr logo and link to Logan's Tumblr account. This is significantly less professional, listener discretion is advised." />
 			</a>
 		</div>
@@ -65,25 +65,25 @@
 	<div class="content-normal-div">
 		<h2>Quick Links</h2>
 		<div class="content-quick-link-div">
-			<a target="_self" href="https://loganhardin.xyz/games#Forza">
+			<a class="undecorated-links" target="_self" href="https://loganhardin.xyz/games#Forza">
 			<div class="content-quick-link-box">
 				<img id="img-quicklink-prev" src="images/Logo03.svg" alt="Temp" />
 				<p>Forza Motorsport</p>
 			</div>
 			</a>
-			<<a target="_self" href="https://loganhardin.xyz/games#Roboxing">
+			<a class="undecorated-links" target="_self" href="https://loganhardin.xyz/games#Roboxing">
 			<div class="content-quick-link-box">
 				<img id="img-quicklink-prev" src="images/Logo03.svg" alt="Temp" />
 				<p>Roboxing</p>
 			</div>
 			</a>
-			<a target="_self" href="https://loganhardin.xyz/games#TriseumLiveLab">
+			<a class="undecorated-links" target="_self" href="https://loganhardin.xyz/games#TriseumLiveLab">
 			<div class="content-quick-link-box">
 				<img id="img-quicklink-prev" src="images/Logo03.svg" alt="Temp" />
 				<p>Triseum &#38; LIVE Lab</p>
 			</div>
 			</a>
-			<a target="_self" href="https://loganhardin.xyz/games#ReaperScripts">
+			<a class="undecorated-links" target="_self" href="https://loganhardin.xyz/games#ReaperScripts">
 			<div class="content-quick-link-box">
 				<img id="img-quicklink-prev" src="images/Logo03.svg" alt="Temp" />
 				<p>Reaper Scripts</p>
@@ -115,16 +115,16 @@
 <!--Footer, similar links as header-->
 	<footer class="footer-main">
 		<div class="footer-links">
-			<a target="_self" href="https://twitter.com/Snoopy_20111">
+			<a class="undecorated-links" target="_self" href="https://twitter.com/Snoopy_20111">
 				<img id="img-twitter" src="images/icon_twitter.svg" alt="Twitter Logo and link to Logan's Twitter page." />
 			</a>
-			<a target="_self" href="https://www.linkedin.com/in/logan-hardin-b5a3a3139/">
+			<a class="undecorated-links" target="_self" href="https://www.linkedin.com/in/logan-hardin-b5a3a3139/">
 				<img id="img-linkedin" src="images/icon_linkedin.svg" alt="LinkedIn logo and link to Logan's LinkedIn page." />
 			</a>
-			<a target="_self" href="https://snoopy20111.bandcamp.com/">
+			<a class="undecorated-links" target="_self" href="https://snoopy20111.bandcamp.com/">
 				<img id="img-bandcamp" src="images/icon_bandcamp.svg" alt="Bandcamp logo and link to Logan's old Bandcamp. Following this link is not advised." />
 			</a>
-			<a target="_self" href="https://www.tumblr.com/snoopy20111">
+			<a class="undecorated-links" target="_self" href="https://www.tumblr.com/snoopy20111">
 				<img id="img-tumblr" src="images/icon_tumblr.svg" alt="Tumblr logo and link to Logan's Tumblr account. This is significantly less professional, listener discretion is advised." />
 			</a>
 		</div>
